--- a/package.json
+++ b/package.json
@@ -13,16 +13,24 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics-cli": "^0.1100.4",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@capacitor/cli": "^2.4.4",
+    "@capacitor/core": "^2.4.4",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/firebase": "^5.30.0",
+    "@ionic-native/geolocation": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^3.0.1",
+    "firebase": "^8.1.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
